--- a/packages/on_audio_query_android/android/build.gradle
+++ b/packages/on_audio_query_android/android/build.gradle
@@ -26,13 +26,14 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace "com.lucasjosino.on_audio_query"
-    compileSdkVersion 34
+    compileSdkVersion 35
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
         minSdkVersion 21
+        targetSdkVersion 35
     }
 }
 
